@@ -457,7 +457,7 @@ caption {
     margin-bottom: 5px;
 }
 
-.littlered {
+.littlered, .g-littlered {
     font-size: 10px;
     color:red;
     vertical-align:top;
